@startuml CharacterSystem
skinparam Dpi 200

class CharacterSystem implements GameControlable
{
    +CharactersAsset asset
    +UnityEvent pauseEvent
    +UnityEvent continueEvent
    +UnityEvent callEvent
    +int Tag
    +int round
    +CallInvoke()
    +PauseInvoke()
    +ContinueInvoke()
    +Quit()
    +FailTrue()
    +AccelerateHandleClick()
}
class CharacterDataBase
{
    +get()
    +add()
    +addBack()
    +Check()
}
class CharacterPool extends SinglePool
{
    +get()
    +push()
}
class CharacterEmitter
{
    +enum Road
    +AddRoad(person,road,isRight,action)
    +AddBackground(person,isRight,action)
}
class RoadPersonAppearController extends AsyncController
{
    +int currentPerson
    +FinishHandle()
}
class BackRoadPersonAppaerController extends AsyncController
{
    +int currentPerson
    +FinishHandle()
}
class CharacterInputManager
{
    +Enable()
    +Disable()
    +Dispose()
}

class GobalSetting


CharacterSystem *-- CharacterPool
CharacterSystem *-- CharacterDataBase
CharacterSystem *-- CharacterEmitter
CharacterSystem *-- RoadPersonAppearController
CharacterSystem *-- BackRoadPersonAppaerController
CharacterSystem *-- CharacterInputManager
CharacterSystem <.. GobalSetting

@enduml